# abfalltermine-birkenfeld-enzkreis

./: .gitignore  AGENTS.md  LICENSE  README.md  generate_ics.py  pyproject.toml
.github/workflows/: ci.yml  update.yml
docs/: alle.ics  birkenfeld.ics  grafenhausen.ics  index.html  recyclinghof.ics
